# emotion-detection

./: .gitignore  README.md  TF_gpu.sbatch  TF_gpu.sh  gpu_run.sbatch  planning.md  pyproject.toml
.github/workflows/: ci.yml  full-training.yml  smoke.yml
configs/: distributed.toml  example.json  example.toml  smoke.json  smoke.toml
data/: stats_train.json  stats_train.toml
emotion-detection/: gpu_run.sbatch
emotion-detection/emotion-detection/.github/workflows/: smoke.yml  (+1 more)
emotion-detection/emotion-detection/emotion-detection/: multi_gpu_train.sbatch
emotion-detection/emotion-detection/slurm/: slurm_48283499.err  slurm_48297061.out  slurm_48297066.err  slurm_48297068.out  slurm_48297071.err  slurm_48297087.out  slurm_48297099.err  slurm_48297099.out  slurm_48297108.err  slurm_48297114.out  slurm_48297173.err  slurm_48297174.out  slurm_48298916.err  slurm_48334535.out  slurm_48335221.out  slurm_48335400.err  slurm_48335693.out  slurm_48335695.out  slurm_48336010.err
emotion-detection/emotion-detection/tests/: test_distributed.py  test_train.py
emotion-detection/slurm/: slurm_48297065.err  slurm_48297065.out  slurm_48297087.err  slurm_48297114.err  slurm_48297173.out  slurm_48297276.err  slurm_48297296.out  slurm_48335305.out  slurm_48335400.out  slurm_48335766.err  slurm_48336010.out  slurm_48336071.out
emotion-detection/tests/: test_checkpointing.py
runs/20251020-182439-smoke-test/tensorboard/: events.out.tfevents.1760999098.Blah
runs/20251117-235601/tensorboard/: events.out.tfevents.1763441917.gpu015.amarel.rutgers.edu
runs/20251119-005506-gh-full/: config_resolved.toml  metrics.toml
runs/20251119-005506-gh-full/tensorboard/: events.out.tfevents.1763531713.gpu015.amarel.rutgers.edu
runs/20251119-012955-2-gpu-run-full/: config_resolved.toml  metrics.toml
runs/20251119-012955-2-gpu-run-full/tensorboard/: events.out.tfevents.1763533803.gpu015.amarel.rutgers.edu
runs/20251119-014724-2-gpu-run-full/: config_resolved.toml  metrics.toml
runs/20251119-014724-2-gpu-run-full/tensorboard/: events.out.tfevents.1763534852.gpu015.amarel.rutgers.edu
runs/20251119-110026-2-gpu-run-full/: config_resolved.toml  metrics.toml
runs/20251121-120053-2gpu-insightface-fer2013/: config_resolved.toml  metrics.toml
scripts/: run_tests.py
slurm/: slurm_48250580.err  slurm_48250719.err  slurm_48283499.out  slurm_48335301.err  slurm_48335693.err  slurm_48335694.err  slurm_48335695.err  slurm_48335948.out  slurm_48336071.err  slurm_48336114.err
src/: checkpointing.py  data.py  distributed.py  main.py  model.py  tests.py  train.py
tests/: test_checkpointing.py  test_data.py  test_main.py  test_model.py  test_train.py
(+72 files in other folders)
