[project]
name = "Emotion_Detection"
version = "0.1.0"
description = "Doing emotion detection based on labeled data and Pytorch"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chex>=0.1.91",
    "clu>=0.0.12",
    "flax>=0.12.0",
    "google-metrax>=0.1.3",
    "jax>=0.8.0",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.25",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "scipy>=1.16.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "tomli-w>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "ty>=0.0.1a23",
    "pygments>=2.18.0",
]
cuda = [
    "jax[cuda13]>=0.8.0",
]
insightface_detection = [
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.16.0,<1.20.0",
    "opencv-python-headless>=4.5.0,<5.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term --cov-fail-under=100"

[tool.ruff]
line-length = 80
output-format = "github"

[tool.ruff.lint]
extend-select = ['D']

[tool.ruff.lint.pydocstyle]
convention = "google"
